# agentgolem

./: .env.example  .gitignore  README.md  benchmark.bat  dashboard.bat  heartbeat.md  pyproject.toml  reset.bat  run_golem.py  soul.md  start.bat  visualize.bat
.github/: copilot-instructions.md
benchmarks/: error_recovery_suite.json  retrieval_priority_suite.json  sample_suite.json  trust_calibration_skewed_suite.json
config/: settings.yaml  settings.yaml.template
docs/: AGENT_README.md  architecture.md  benchmarking.md  blog-post-how-agentgolem-agents-work.md  operator-guide.md  safety-and-audit.md
tests/: conftest.py  test_api.py  test_attention.py  test_bayesian.py  test_benchmark_compare.py  test_benchmark_live_memory.py  test_benchmark_metrics.py  test_benchmark_runner.py  test_browser.py  test_bus.py  test_channels.py  test_cli.py  test_config.py  test_consciousness.py  test_consolidation.py  test_contradiction.py  test_dashboard.py  test_email.py  test_evolution.py  test_experiment_ledger.py  test_experiment_models.py  test_experiment_orchestrator.py  test_experiment_runner.py  test_federated_retrieval.py  test_goals.py  test_google_auth.py  test_google_search.py  test_harness.py  test_heartbeat.py  test_integration.py  test_launcher.py  test_llm.py  test_logging.py  test_memory_encoding.py  test_memory_models.py  test_memory_mutations.py  test_memory_retrieval.py  test_memory_schema.py  test_memory_store.py  test_memory_visualizer.py  (+25 more)
tfv/: abab.txt  alchemical_tools.txt  alembic.txt  autokaustos.txt  autopsy_vows.txt  axes_resonance.txt  axis.txt  (+76 more)
(+136 files in other folders)
